# bevy_trail

./: CLAUDE.md  Cargo.toml  README.md
assets/shaders/: bufferless_drawing.wgsl  trail_drawing.wgsl
assets/shaders/trail/: common.wgsl  material.wgsl  trail_common.wgsl  trail_ring.wgsl
examples/: bufferless_drawing.rs  double_pendulum.rs  emitter_test.rs  render_test.rs  screenshot_test.rs  stress_bench.rs  trail_drawing.rs  trail_smoke.rs  trail_stress.rs  trail_visual.rs  update_test.rs
src/: components.rs  emitter.rs  lib.rs  plugin.rs  render.rs  types.rs
